--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@tailwindcss/vite": "^4.0.7",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.4",
+    "firebase": "^11.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
